tests/corpus/negative/N01-multiple-functions/source.py
def first():
    return 1

def second():
    return 2

